Fix scrollbar on calendar days bug

--- a/src/components/CalendarDay/styles.scss
+++ b/src/components/CalendarDay/styles.scss
@@ -74,7 +74,7 @@
 
   .reminders-container {
     padding: 0 10px 10px;
-    height: 90%;
+    height: 70%;
     width: 100%;
 
     .reminder-controls {
